# Aftertaste

./: .dockerignore  .env.example  .env.server.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
app-ui/: README.md  package-lock.json  package.json
app-ui/src/: App.tsx  index.css  main.tsx  types.ts
app-ui/src-tauri/: Cargo.toml  tauri.conf.json
app-ui/src-tauri/src/: lib.rs  main.rs
app-ui/src/api/: client.ts
app-ui/src/auth/: clerk.tsx  config.ts
app-ui/src/components/: ScoreBreakdown.tsx  SkipHeatmap.tsx  TrackCard.tsx
app-ui/src/screens/: Dashboard.tsx  DesktopAuthBridge.tsx  Memory.tsx  Rules.tsx  Sources.tsx  TodayMix.tsx
app-ui/src/state/: authStore.ts  playbackStore.ts  scoringStore.ts
core/: __init__.py  api.py  auth_pkce.py  candidate_builder.py  cloud_auth.py  cloud_sync.py  cloud_sync_client.py  config.py  db.py  explain.py  history_reconciler.py  library_sync.py  models.py  playback_poller.py  playlist_sync.py  queue_manager.py  rules.py  scorer.py  service.py  spotify_client.py  spotify_ingest.py
migrations/: 001_init.sql  002_scores.sql  003_edges.sql  004_cloud_sync.sql  005_cloud_spotify_tokens.sql
