[project]
name = "aftertaste-core"
version = "0.1.0"
description = "Local-first Spotify taste memory service for Aftertaste"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn[standard]>=0.38.0",
  "requests>=2.32.5",
  "python-dotenv>=1.1.1",
  "keyring>=25.6.0",
  "PyJWT[crypto]>=2.10.1",
  "cryptography>=45.0.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
